css/profile.css
/**************************************
********************* PROFILE PHOTO ***
***************************************/
.profile-card
{
    margin: 0 0 10px 335px;
    padding: 7px;
    background: rgba( 255, 255, 255, .5 );
    border: solid 1px rgba( 69, 71, 77, .05 );
    position: relative;
}
.profile-card-main
{
    width: 520px;
    height: 280px;
    text-align: center;
    position: relative;
    transition: all .2s linear;
}
.profile-card-main:before
{
    content: "";
    border: solid 0px #fff;
    transition: all .2s linear;
    position: absolute;
    left: 1px;
    top: 1px;
    right: 1px;
    bottom: 1px;
    z-index: 0;
}
.profile-card-main *
{
    position: relative;
    z-index: 1;
}
.profile-card-photo
{
    width: 74px;
    height: 74px;
    margin: 20px auto 5px auto;
    border-radius: 15%;
    border: solid 5px #fff;
    box-sizing: content-box;
}
.profile-card-main h1
{
    font-size: 24px;
    font-weight: bold;
    color: #fff;
}
.profile-card-main h2
{
    color: #fff;    
}
.profile-card .direct-messages,
.profile-card .direct-messages-with-user,
.profile-card .follow
{
    display: block;
    position: absolute;
    bottom: 20px;
    right: 10px;
    padding: 10px;
    font-size: 12px;
    width: 120px;
    text-align: center;
    color: rgba( 0, 0, 0, .7 );
    background: rgba( 0, 0, 0, .1 );
    border: none;
    transition: all .2s linear;
}
.profile-card .follow
{
    right: 135px;
}
.profile-card .direct-messages:hover,
.profile-card .direct-messages-with-user:hover,
.profile-card .follow:hover
{
    background: rgba( 0, 0, 0, .3 );
}
.profile-card.forEdition
{
    margin: 0 auto;
    width: 540px;
}
.forEdition .profile-card-photo
{
    border: solid 2px #fff;
    position: relative;
    cursor: pointer;
    transition: all .2s linear;
}
.forEdition .profile-card-main:hover:after,
.forEdition .profile-card-photo:after
{
    content: "";
    width: 36px;
    height: 36px;
    position: absolute;
    top: 10px;
    right: 10px;
    background: url(../img/edit.png) no-repeat right top;
}
.forEdition .profile-card-main:hover:before
{
    border: solid 5px #fff;
}
.forEdition .profile-card-main h2
{
    margin-bottom: 8px;
}
.forEdition .profile-card-main input
{
    display: block;
    margin: 0 auto;
    background: rgba( 0, 0, 0, .1 );
    border: none;
    padding: 6px 4px;
    color: #fff;
    margin-bottom: 4px;
    text-align: center;
    transition: all .2s linear;
}
.forEdition .profile-card-main input:hover,
.forEdition .profile-card-main input:focus,
.forEdition .profile-card-photo:hover
{
    background: rgba( 0, 0, 0, .3 );    
}
.input-description
{
    width: 90%;
}
.input-name
{
    font-size: 20px;
}
.forEdition .profile-card-main .input-website,
.forEdition .profile-card-main .input-city
{
    display: inline-block;
}
.profile-edition-buttons
{
    padding: 10px;
    text-align: right;
}
/*************************************
****************** PROFILE MODAL
**************************************/
.profile-modal .modal-wrapper
{
    width: 528px;
    height: 680px;
    margin: -340px 0 0 -264px;
    border-radius: 5px;
    overflow: hidden;
}
.profile-modal .modal-content
{
    padding: 3px;
}
.profile-modal .profile-data
{
    display: inline-block;
}
.profile-modal .postboard
{
    margin-left: 0;
    padding: 5px 0 5px 0;
}
.profile-modal .postboard h2
{
    width: auto;
}
.profile-modal .postboard-posts
{
    height: 240px;
    overflow: auto;
}
.profile-modal .profile-card-main
{
    background: #45474d;
    color: white;
}
.profile-modal .profile-card-main a {
    color: #8bb9e0;
}
.profile-modal .postboard-posts .post
{
    padding: 5px;
}
.profile-modal .post-interactions
{
    margin: 2px 10px 3px 60px;
}
.profile-modal .profile-card
{
    margin: 0;
    padding: 0;
}
/*
.profile-card-main
{
    height: 200px;
}
*/
.profile-modal .direct-messages,
.profile-modal .direct-messages-with-user,
.profile-modal .follow
{
    bottom: 10px;
}

